# readb

./: .gitignore  ARCHITECTURE.MD  Cargo.toml  NOTICE  README.md
.github/workflows/: push_to_crates.yml  rust.yml
benches/: rdb_vs_sled.rs  write_benchmark.rs
info/: benchmark.csv  generate.py
src/: api.rs  database.rs  index_api.rs  lib.rs
src/cache/: lfu.rs  mod.rs
src/databases/: db_trait.rs  lazy_loader_db.rs  mod.rs
src/garbage_collection/: mod.rs  shrink.rs  zones.rs
src/index_table/: btree.rs  factory.rs  hash_map.rs  mod.rs
src/io/: buffered_file.rs  lazy_file.rs  loader.rs  mod.rs
src/remote/: cloner.rs  compression.rs  mod.rs
src/transactions/: mod.rs  simple.rs
tests/: backwards_compatibilty.rs  database_tests.rs  read_write_test.rs  remote_tests.rs
