[package]
name = "readb"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Procelewski <alex@basishealth.io>"]
description = "A simple, efficient, and modular embedded read-only key-value database in Rust."
repository = "https://github.com/Basis-Health/readb"
readme = "README.md"


[dependencies]
anyhow = "1.0.72"
bincode = "1.3.3"
fs2 = "0.4.3"

reqwest = { version = "0.11.18", optional = true }
brotli = { version = "3.3.4", optional = true }

[dev-dependencies]
tempfile = "3.7.0"
criterion = { version = "0.5.1", features = ["html_reports"]}
tokio = { version = "1.29.1", features = ["full"] }
sled = {version = "0.34.7" }
redb = "1.0.5"
warp = "0.3.5"
rand = "0.8.5"

[[bench]]
name = "rdb_vs_sled"
harness = false

[features]
default = []
index-write = []
ignore-path-check = []

default-remote = ["remote-cloning", "remote-brotli-compression"]
remote-cloning = ["reqwest"]
remote-brotli-compression = ["brotli"]
