[package]
name = "readb"
version = "0.3.0"
edition = "2021"
authors = ["Alexander Procelewski <alex@basishealth.io>"]
description = "A simple, efficient, and modular embedded read-first key-value database in Rust."

repository = "https://github.com/Basis-Health/readb"
homepage = "https://github.com/Basis-Health/readb"
readme = "README.md"
license = "Apache-2.0"

keywords = ["database", "embedded", "key-value"]
categories = ["database-implementations", "embedded"]

[dependencies]
anyhow = "1.0.72"
bincode = "1.3.3"
fs2 = "0.4.3"

reqwest = { version = "0.11.18", optional = true }
brotli = { version = "3.3.4", optional = true }

[dev-dependencies]
tempfile = "3.7.0"
criterion = { version = "0.5.1", features = ["html_reports"]}
tokio = { version = "1.29.1", features = ["full"] }
sled = {version = "0.34.7" }
redb = "1.0.5"
warp = "0.3.5"
rand = "0.8.5"
walkdir = "2"

[[bench]]
name = "rdb_vs_sled"
harness = false

#[[bench]]
#name = "write_benchmark"
#harness = false

[features]
default = []
ignore-path-check = []

default-remote = ["remote-cloning", "remote-brotli-compression"]
remote-cloning = ["reqwest"]
remote-brotli-compression = ["brotli"]

write = []
garbage-collection = []